加入gateway，整体升级为cloud框架